objects/User.object
<CustomObject>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
                <color>#990000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>People_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>People Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Certified_Product_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Product Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Certified_Scrum_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Scrum Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__GUS_User_Type__c</fullName>
        <description>Full Time Employee - This will be used to identify all FTEs in GUS
Contractor - This will be used to identify all Contractors in GUS
Team User - This will be used to identify all Team Users in GUS
API user - This will be used to identify all API users in GUS</description>
        <label>GUS User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Notification_Level__c</fullName>
        <inlineHelpText>Adjusts how often you are sent emails about Work.

Bread &amp; Butter:  User comments and added as an Assignee
Meat &amp; Potatoes: User comments, status changes and added as Assignee
The Whole Enchilada: All notifications (Default)</inlineHelpText>
        <label>Work Notification Level</label>
        <picklist>
            <picklistValues>
                <fullName>Bread &amp; Butter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meat &amp; Potatoes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>The Whole Enchilada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Product_Owner_Certified_Date__c</fullName>
        <label>Product Owner Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Master_Certified_Date__c</fullName>
        <label>Scrum Master Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Show_All_Work_Comments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show All Work Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Summary__c</fullName>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Team_Member_Allocation__c</fullName>
        <formula>HYPERLINK(&apos;/apex/adm_teammemberallocation?Id=&apos; +  Id, &apos;view&apos; )</formula>
        <label>Team Member Allocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__User_Preference__c</fullName>
        <label>User Preference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Wall_Preference__c</fullName>
        <label>Wall Preference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Work_User_Interface__c</fullName>
        <inlineHelpText>Determines which version of the Work page you will see for Bugs and User Stories.</inlineHelpText>
        <label>Work User Interface</label>
        <picklist>
            <picklistValues>
                <fullName>Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Generation</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignInactiveUsers</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DocuSign Inactive Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>